--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
+JavaProffesional.iml
 # AWS User-specific
 .idea/**/aws.xml
 
